# floreum_parser

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  todo.txt
src/: data.rs  error.rs  lib.rs  message.rs  metadata.rs  names.rs  options.rs  request.rs  response.rs  state.rs  test.rs
src/message/: bind.rs  drop.rs  error.rs  insert.rs  jump.rs  list.rs  make.rs  mod.rs  overwrite.rs  point.rs  read.rs  remove.rs  rename.rs  seek.rs  state.rs  tell.rs  truncate.rs  walk.rs
