[package]
name = "floreum_parser"
version = "11.0.0"
authors = ["Tanika Mellifont-Young <tanika.young@proton.me>"]
edition = "2024"
description = "A no_std parser for Floreum messages."
repository = "https://github.com/tanika-mellifont/floreum_parser"
license = "MIT OR Apache-2.0"
keywords = ["floreum", "parser", "message", "network", "osdev"]
categories = ["api-bindings", "parsing", "filesystem", "no-std", "network-programming"]

[dependencies]
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"]}